card-Watch-Video button correct alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,7 +59,7 @@ a {
 .inpg{
     align-content: center;
     padding-left: 20px;
-    margin-top: 65px;
+    margin-top: 40px;
 }
 
 .cardp > p{
